--- a/shared/pages/home.html
+++ b/shared/pages/home.html
@@ -1,22 +1,25 @@
-<div class="container-fluid px-3 py-3 ">
+<div class="container-fluid px-3 py-3">
   <h5 class="mb-3 fw-semibold">Dashboard</h5>
 
   <!-- Cards de métricas -->
   <div class="row g-3 mb-4">
-    <div class="fw-semibold col-12"> <i class="bi bi-box-fill text-primary fs-6"></i> Productos </div>
+    <div class="fw-semibold col-12">
+      <i class="bi bi-box-fill text-primary fs-6"></i> Productos
+    </div>
     <!-- Total de productos -->
     <div class="col-4">
       <div class="card shadow-sm border-0">
         <div class="card-body py-2 px-3">
           <div class="d-flex justify-content-between align-items-center">
-            <div class="bg-primary bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1">
+            <div
+              class="bg-primary bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1"
+            >
               <i class="bi bi-boxes text-primary fs-4"></i>
             </div>
             <div class="text-end">
               <div class="text-muted small">Total</div>
               <div class="h6 fw-bold text-primary" id="totalProducts">0</div>
             </div>
-            
           </div>
         </div>
       </div>
@@ -24,20 +27,30 @@
 
     <!-- Productos con stock bajo -->
     <div class="col-4">
-      <div class="card shadow-sm border-0">
+      <div
+        class="card shadow-sm border-0"
+        id="cardLowStock"
+        style="cursor: pointer"
+      >
         <div class="card-body py-2 px-2">
           <div class="d-flex justify-content-between align-items-center">
-            <div class="bg-warning bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1">
+            <div
+              class="bg-warning bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1"
+            >
               <i class="bi bi-box text-warning fs-5"></i>
             </div>
             <div class="text-end">
               <div class="text-muted small mb-0">Stock bajo</div>
               <div class="d-inline-flex align-items-center gap-2">
-                <i class="bi bi-exclamation-triangle-fill text-warning fs-6"></i>
-                <div class="h6 mb-0 fw-bold text-warning" id="lowStockProducts">0</div>
+                <i
+                  class="bi bi-exclamation-triangle-fill text-warning fs-6"
+                ></i>
+                <div class="h6 mb-0 fw-bold text-warning" id="lowStockProducts">
+                  0
+                </div>
               </div>
             </div>
-            <i class="bi bi-chevron-right text-muted "></i>
+            <i class="bi bi-chevron-right text-muted"></i>
           </div>
         </div>
       </div>
@@ -45,120 +58,150 @@
 
     <!-- Productos con stock crítico -->
     <div class="col-4">
-      <div class="card shadow-sm border-0">
+      <div
+        class="card shadow-sm border-0"
+        id="cardCriticalStock"
+        style="cursor: pointer"
+      >
         <div class="card-body py-2 px-2">
           <div class="d-flex justify-content-between align-items-center">
-            <div class="bg-danger bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1">
+            <div
+              class="bg-danger bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center px-2 py-1"
+            >
               <i class="bi bi-box text-danger fs-5"></i>
-            </div>  
+            </div>
             <div class="text-end">
               <div class="text-muted small mb-0">Stock crítico</div>
               <div class="d-inline-flex align-items-center gap-2">
                 <i class="bi bi-exclamation-triangle-fill text-danger fs-6"></i>
-                <div class="h6 mb-0 fw-bold text-danger" id="criticalStockProducts">0</div>
+                <div
+                  class="h6 mb-0 fw-bold text-danger"
+                  id="criticalStockProducts"
+                >
+                  0
+                </div>
               </div>
             </div>
-            <i class="bi bi-chevron-right text-muted "></i>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Total de gastos -->
-    <div class="col-6">
-      <div class="card shadow-sm border-0">
-        <div class="card-body p-3">
-          <div class="d-flex align-items-center justify-content-between">
-            <div>
-              <div class="text-muted small mb-1">Total gastos</div>
-              <div class="h4 mb-0 fw-bold text-danger" id="totalExpenses">$0.00</div>
-            </div>
-            <div class="bg-danger bg-opacity-10 rounded-circle p-3">
-              <i class="bi bi-cash-coin text-danger fs-4"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Gastos del mes -->
-    <div class="col-6">
-      <div class="card shadow-sm border-0">
-        <div class="card-body p-3">
-          <div class="d-flex align-items-center justify-content-between">
-            <div>
-              <div class="text-muted small mb-1">Gastos del mes</div>
-              <div class="h4 mb-0 fw-bold text-danger" id="monthlyExpenses">$0.00</div>
-            </div>
-            <div class="bg-danger bg-opacity-10 rounded-circle p-3">
-              <i class="bi bi-calendar-month text-danger fs-4"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Valor total del inventario -->
-    <div class="col-6">
-      <div class="card shadow-sm border-0">
-        <div class="card-body p-3">
-          <div class="d-flex align-items-center justify-content-between">
-            <div>
-              <div class="text-muted small mb-1">Valor inventario</div>
-              <div class="h4 mb-0 fw-bold text-success" id="inventoryValue">$0.00</div>
-            </div>
-            <div class="bg-success bg-opacity-10 rounded-circle p-3">
-              <i class="bi bi-currency-dollar text-success fs-4"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Movimientos del mes -->
-    <div class="col-6">
-      <div class="card shadow-sm border-0">
-        <div class="card-body p-3">
-          <div class="d-flex align-items-center justify-content-between">
-            <div>
-              <div class="text-muted small mb-1">Movimientos del mes</div>
-              <div class="h4 mb-0 fw-bold" id="monthlyMovements">0</div>
-            </div>
-            <div class="bg-info bg-opacity-10 rounded-circle p-3">
-              <i class="bi bi-calendar-month text-info fs-4"></i>
-            </div>
+            <i class="bi bi-chevron-right text-muted"></i>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Sección de actividad reciente -->
-  <div class="mb-3">
-    <h6 class="fw-semibold mb-2">Actividad reciente</h6>
-    
-    <!-- Últimos movimientos -->
-    <div class="card shadow-sm border-0 mb-2">
-      <div class="card-body p-2">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="d-flex align-items-center gap-2">
-            <i class="bi bi-arrow-repeat text-info"></i>
-            <small class="text-muted">Últimos movimientos</small>
-          </div>
-          <small class="text-muted" id="recentMovementsCount">0</small>
-        </div>
-      </div>
+  <!-- Sección: Resumen de la contabilidad del día -->
+  <div class="mb-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h6 class="fw-semibold mb-0">
+        <i class="bi bi-calculator text-primary"></i> Resumen de la contabilidad
+        del día
+      </h6>
+      <button
+        class="btn btn-sm btn-chip rounded-pill btn-outline-primary"
+        id="btnViewAccountingDetails"
+      >
+        Ver detalles
+      </button>
     </div>
 
-    <!-- Últimos gastos -->
-    <div class="card shadow-sm border-0">
-      <div class="card-body p-2">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="d-flex align-items-center gap-2">
-            <i class="bi bi-cash-coin text-danger"></i>
-            <small class="text-muted">Últimos gastos</small>
+    <div class="row g-2">
+      <!-- Importe total del inventario -->
+      <div class="col-12">
+        <div class="card shadow-sm border-0">
+          <div class=" py-1 px-3">
+            <div class="d-flex align-items-center justify-content-between">
+              <div>
+                <div class="text-muted small">Importe total</div>
+                <div
+                  class="h5 fw-bold text-primary"
+                  id="accountingTotalAmount"
+                >
+                  $0.00
+                </div>
+              </div>
+              <div
+                class="bg-primary bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center p-3"
+                style="width: 40px; height: 40px"
+              >
+                <i class="bi bi-cash-stack text-primary fs-4"></i>
+              </div>
+            </div>
           </div>
-          <small class="text-muted" id="recentExpensesCount">0</small>
+        </div>
+      </div>
+
+      <!-- Total de gastos -->
+      <div class="col-12">
+        <div class="card shadow-sm border-0">
+          <div class=" py-1 px-3">
+            <div class="d-flex align-items-center justify-content-between">
+              <div>
+                <div class="text-muted small">Total gastos</div>
+                <div
+                  class="h5 fw-bold text-danger"
+                  id="accountingTotalExpenses"
+                >
+                  $0.00
+                </div>
+              </div>
+              <div
+                class="bg-danger bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center p-3"
+                style="width: 40px; height: 40px"
+              >
+                <i class="bi bi-cash-coin text-danger fs-4"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Total de ventas -->
+      <div class="col-12">
+        <div class="card shadow-sm border-0">
+          <div class=" py-1 px-3">
+            <div class="d-flex align-items-center justify-content-between">
+              <div>
+                <div class="text-muted small">Total ventas</div>
+                <div
+                  class="h5 fw-bold text-success"
+                  id="accountingTotalSales"
+                >
+                  $0.00
+                </div>
+              </div>
+              <div
+                class="bg-success bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center p-3"
+                style="width: 40px; height: 40px"
+              >
+                <i class="bi bi-cart-check text-success fs-4"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cierre de caja (diferencia) -->
+      <div class="col-12">
+        <div class="card shadow-sm border-0">
+          <div class=" py-1 px-3">
+            <div class="d-flex align-items-center justify-content-between">
+              <div>
+                <div class="text-muted small">Cierre de caja</div>
+                <div class="d-inline-flex align-items-center gap-2">
+                  <i class="bi bi-cash-coin text-danger" id="accountingDifferenceIcon"></i>
+                  <div class="h5 fw-bold" id="accountingDifference">
+                    $0.00
+                  </div>
+                </div>
+              </div>
+              <div
+                class="bg-info bg-opacity-10 rounded-circle d-flex align-items-center justify-content-center p-3"
+                style="width: 40px; height: 40px"
+              >
+                <i class="bi bi-calculator text-info fs-4"></i>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
