incluir el total de gastos en el total de ventas de la contabilidad

--- a/shared/pages/accounting.html
+++ b/shared/pages/accounting.html
@@ -23,7 +23,7 @@
   <div id="alertNoExpenses" class="alert alert-danger d-none">
     <i class="bi bi-info-circle"></i>
     <strong>No hay gastos registrados para el día de ayer</strong>
-    <button class="btn btn-sm btn-info rounded-pill" onclick="goToExpenses()">
+    <button class="btn btn-sm btn-danger rounded-pill" onclick="goToExpenses()">
       Ir a Gastos
     </button>
   </div>
