-cambio de arquitectura -centralización de constantes y definiciones de configuraciones de paginas y modales

--- a/modules/accounting/modals/cash-sales-modal.html
+++ b/modules/accounting/modals/cash-sales-modal.html
@@ -1,10 +1,10 @@
-<div class="modal fade" id="cashSalesModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="cash-sales-modal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i class="bi bi-cash-coin text-success"></i>
-          <span>Ventas en Efectivo</span>
+          <i class="bi bi-cash text-success"></i>
+          <span>Ventas en efectivo</span>
         </h5>
         <button
           type="button"
