--- a/modules/inventory/modals/inventory-modal.html
+++ b/modules/inventory/modals/inventory-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="inventoryModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="inventory-modal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <!-- Header -->
