--- a/layout.html
+++ b/layout.html
@@ -233,7 +233,7 @@
     </div>
 
     <!-- ===== CONTENIDO DINÁMICO ===== -->
-    <main id="app" class="container-fluid px-2">
+    <main id="pages-container" class="container-fluid px-2">
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
     </main>
 
@@ -252,15 +252,15 @@
         </button>
 
         <!-- BOTÓN ADICIONAR (con cards flotantes) -->
-          <button
-            class="btn btn-link rounded-pill text-decoration-none flex-fill bottom-nav-btn"
-            id="navAdd"
-          >
-            <div class="text-center">
-              <i class="bi bi-plus-circle-fill fs-1"></i><br />
-              <small>Adicionar</small>
-            </div>
-          </button>
+        <button
+          class="btn btn-link rounded-pill text-decoration-none flex-fill bottom-nav-btn"
+          id="navAdd"
+        >
+          <div class="text-center">
+            <i class="bi bi-plus-circle-fill fs-1"></i><br />
+            <small>Adicionar</small>
+          </div>
+        </button>
 
         <!-- CONTABILIDAD -->
         <button
@@ -288,7 +288,9 @@
             >
               <i class="bi bi-box text-white"></i>
             </div>
-            <span class="flex-grow-1 text-start text-muted">Agregar Producto</span>
+            <span class="flex-grow-1 text-start text-muted"
+              >Agregar Producto</span
+            >
             <i class="bi bi-chevron-right text-muted"></i>
           </div>
         </button>
@@ -305,7 +307,9 @@
             >
               <i class="bi bi-arrow-repeat text-white"></i>
             </div>
-            <span class="flex-grow-1 text-start text-muted">Agregar Movimiento</span>
+            <span class="flex-grow-1 text-start text-muted"
+              >Agregar Movimiento</span
+            >
             <i class="bi bi-chevron-right text-muted"></i>
           </div>
         </button>
@@ -339,7 +343,9 @@
             >
               <i class="bi bi-clipboard-data text-white"></i>
             </div>
-            <span class="flex-grow-1 text-start text-muted">Realizar Inventario</span>
+            <span class="flex-grow-1 text-start text-muted"
+              >Realizar Inventario</span
+            >
             <i class="bi bi-chevron-right text-muted"></i>
           </div>
         </button>
@@ -347,28 +353,32 @@
     </nav>
 
     <!-- ===== AQUI SE CARGAN LOS MODALS ===== -->
-    <div id="modals"></div>
+    <div id="modals-container"></div>
 
     <!-- ===== SCRIPTS ===== -->
     <!-- Core/Shared JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="shared/js/storage.js"></script>
-    <script src="shared/js/auth.js"></script>
-    <script src="shared/js/router.js"></script>
-    <script src="shared/js/modals.js"></script>
-    <script src="shared/js/undo.js"></script>
-    <script src="shared/js/module-controls.js"></script>
-    <script src="shared/js/navigation.js"></script>
+    <script src="js/configs.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/router.js"></script>
+    <script src="js/modules-controls.js"></script>
+    <script src="js/modules-modals.js"></script>
+    <script src="js/navigation.js"></script>
 
     <!-- Páginas compartidas JS -->
-    <script src="shared/js/home.js"></script>
-    <script src="shared/js/accounting.js"></script>
-    <script src="shared/js/settings.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/settings.js"></script>
+
+    <!-- Componentes JS -->
+    <script src="components/snackbar/undo.js"></script>
+    <script src="components/confirm-delete/confirm-delete.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
     <script src="modules/movements/movements.js"></script>
     <script src="modules/inventory/inventory.js"></script>
     <script src="modules/expenses/expenses.js"></script>
+    <script src="modules/accounting/accounting.js"></script>
   </body>
 </html>
