--- a/modules/accounting/modals/transfer-sales-modal.html
+++ b/modules/accounting/modals/transfer-sales-modal.html
@@ -1,10 +1,10 @@
-<div class="modal fade" id="transferSalesModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="transfer-sales-modal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i class="bi bi-bank text-success"></i>
-          <span>Ventas por Transferencia</span>
+          <i class="bi bi-credit-card text-success"></i>
+          <span>Ventas por transferencia</span>
         </h5>
         <button
           type="button"
