--- a/modules/products/modals/products-modal.html
+++ b/modules/products/modals/products-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="productModal" tabindex="-1">
+<div class="modal fade" id="products-modal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       
