--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <!-- JS (solo referencias) -->
-  <script src="shared/js/auth.js"></script>
+  <script src="js/auth.js"></script>
 
 </body>
 </html>
