refactor y optimizacion de navigation -se modificaron tambien las configs y router

--- a/layout.html
+++ b/layout.html
@@ -63,7 +63,7 @@
               class="btn btn-sm rounded-circle btn-light d-flex align-items-center justify-content-center"
               style="width: 36px; height: 36px"
               type="button"
-              id="contextMenuButton"
+              id="btnContextMenu"
               data-bs-toggle="dropdown"
               aria-expanded="false"
               title="Menú"
@@ -72,7 +72,7 @@
             </button>
             <ul
               class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="contextMenuButton"
+              aria-labelledby="btnContextMenu"
             >
               <li>
                 <a class="dropdown-item" href="#" id="contextMenuProducts">
