--- a/modules/products/products.html
+++ b/modules/products/products.html
@@ -1,10 +1,7 @@
-<div class="container-fluid">
-
+<div class="">
   <!-- Lista de productos -->
-  <div class="container-fluid px-2 py-2">
-    <div id="productsList" class="d-grid gap-2">
-      <!-- items -->
-    </div>
+  <div id="productsList" class="d-grid gap-2">
+    <!-- items -->
   </div>
 
   <!-- TEMPLATE: Producto -->
