--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,4 @@
-<div class="container-fluid px-3 py-3">
-  <h5 class="mb-3 fw-semibold">Dashboard</h5>
+<div class="" style="margin-top: 70px;">
 
   <!-- Cards de métricas -->
   <div class="row mb-4 g-2">
