--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,125 +1,118 @@
-<div class="container-fluid px-3 py-3 mt-5">
-  <!-- Sección: Unidades de Medida -->
-  <div class="mb-4">
-    <div class="d-flex align-items-center gap-2">
-      <i class="bi bi-beaker text-primary fs-5"></i>
-      <h6 class="mb-0 fw-semibold">Unidades de Medida</h6>
-    </div>
-
-    <!-- Texto informativo -->
-    <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
-      <i class="bi bi-info-circle"></i>
-      <span>Unidades utilizadas para medir las cantidades de los productos</span>
-    </small>
-
-    <!-- Campo de texto + botón agregar -->
-    <div class="d-flex gap-2 mb-3">
-      <div class="flex-grow-1 d-inline-flex">
-        <input
-          type="text"
-          class="form-control form-control-sm rounded-pill"
-          id="inputNewUnit"
-          placeholder="Nueva unidad de medida..."
-        />
-        <div class="invalid-feedback" id="unitErrorFeedback"></div>
-      </div>
-      <button
-        class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-        id="btnAddUnit"
-        style="width: 40px; height: 40px; flex-shrink: 0"
-      >
-        <i class="bi bi-plus fs-5"></i>
-      </button>
-    </div>
-
-
-    <!-- Chips de unidades de medida -->
-    <div id="unitsList" class="d-flex flex-wrap gap-2">
-      <!-- Se llenan dinámicamente -->
-    </div>
+<!-- Sección: Unidades de Medida -->
+<div class="mb-4" style="margin-top: 70px;">
+  <div class="d-flex align-items-center gap-2">
+    <i class="bi bi-beaker text-primary fs-5"></i>
+    <h6 class="mb-0 fw-semibold">Unidades de Medida</h6>
   </div>
 
-  <!-- Sección: Conceptos de Gastos -->
-  <div class="mb-4">
-    <div class="d-flex align-items-center gap-2">
-      <i class="bi bi-cash-coin text-primary fs-5"></i>
-      <h6 class="mb-0 fw-semibold">Conceptos de Gastos</h6>
-    </div>
-    
-    <!-- Texto informativo -->
-    <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
-      <i class="bi bi-info-circle"></i>
-      <span>Conceptos utilizados para categorizar los gastos registrados</span>
-    </small>
+  <!-- Texto informativo -->
+  <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
+    <i class="bi bi-info-circle"></i>
+    <span>Unidades utilizadas para medir las cantidades de los productos</span>
+  </small>
 
-    <!-- Campo de texto + botón agregar -->
-    <div class="d-flex gap-2 mb-3">
-      <div class="flex-grow-1 d-inline-flex">
-        <input
-          type="text"
-          class="form-control form-control-sm rounded-pill"
-          id="inputNewConcept"
-          placeholder="Nuevo concepto de gastos..."
-        />
-        <div class="invalid-feedback" id="conceptErrorFeedback"></div>
-      </div>
-      <button
-        class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-        id="btnAddConcept"
-        style="width: 40px; height: 40px; flex-shrink: 0"
-      >
-        <i class="bi bi-plus fs-5"></i>
-      </button>
+  <!-- Campo de texto + botón agregar -->
+  <div class="d-flex gap-2 mb-3">
+    <div class="flex-grow-1 d-inline-flex">
+      <input
+        type="text"
+        class="form-control form-control-sm rounded-pill"
+        id="inputNewUnit"
+        placeholder="Nueva unidad de medida..."
+      />
+      <div class="invalid-feedback" id="unitErrorFeedback"></div>
     </div>
-
-
-    <!-- Chips de conceptos de gastos -->
-    <div id="conceptsList" class="d-flex flex-wrap gap-2">
-      <!-- Se llenan dinámicamente -->
-    </div>
+    <button
+      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
+      id="btnAddUnit"
+      style="width: 40px; height: 40px; flex-shrink: 0"
+    >
+      <i class="bi bi-plus fs-5"></i>
+    </button>
   </div>
 
-  <!-- Sección: Porcentaje de Salario -->
-  <div class="mb-4">
-    <div class="d-flex align-items-center gap-2">
-      <i class="bi bi-percent text-primary fs-5"></i>
-      <h6 class="mb-0 fw-semibold">Porcentaje de Salario</h6>
+  <!-- Chips de unidades de medida -->
+  <div id="unitsList" class="d-flex flex-wrap gap-2">
+    <!-- Se llenan dinámicamente -->
+  </div>
+</div>
+
+<!-- Sección: Conceptos de Gastos -->
+<div class="mb-4">
+  <div class="d-flex align-items-center gap-2">
+    <i class="bi bi-cash-coin text-primary fs-5"></i>
+    <h6 class="mb-0 fw-semibold">Conceptos de Gastos</h6>
+  </div>
+
+  <!-- Texto informativo -->
+  <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
+    <i class="bi bi-info-circle"></i>
+    <span>Conceptos utilizados para categorizar los gastos registrados</span>
+  </small>
+
+  <!-- Campo de texto + botón agregar -->
+  <div class="d-flex gap-2 mb-3">
+    <div class="flex-grow-1 d-inline-flex">
+      <input
+        type="text"
+        class="form-control form-control-sm rounded-pill"
+        id="inputNewConcept"
+        placeholder="Nuevo concepto de gastos..."
+      />
+      <div class="invalid-feedback" id="conceptErrorFeedback"></div>
     </div>
+    <button
+      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
+      id="btnAddConcept"
+      style="width: 40px; height: 40px; flex-shrink: 0"
+    >
+      <i class="bi bi-plus fs-5"></i>
+    </button>
+  </div>
 
-    <!-- Texto informativo -->
-    <small class="text-muted d-flex align-items-center gap-1 px-3 pb-3">
-      <i class="bi bi-info-circle"></i>
-      <span>Porcentaje utilizado para calcular el salario del vendedor</span>
-    </small>
+  <!-- Chips de conceptos de gastos -->
+  <div id="conceptsList" class="d-flex flex-wrap gap-2">
+    <!-- Se llenan dinámicamente -->
+  </div>
+</div>
 
-    <div class="d-flex gap-2">
-      <div class="flex-grow-1 d-inline-flex flex-column">
-        <div
-          class="input-group input-group rounded-pill overflow-hidden border"
-        >
-          <input
-            type="number"
-            class="form-control form-control px-3"
-            id="inputSalaryPercentage"
-            placeholder="1.7"
-            min="0"
-            max="100"
-            step="0.1"
-          />
-          <span class="input-group-text bg-primary text-white border-0 px-3">
-            <i class="bi bi-percent"></i>
-          </span>
-        </div>
-        <div class="invalid-feedback" id="salaryPercentageErrorFeedback"></div>
+<!-- Sección: Porcentaje de Salario -->
+<div class="mb-4">
+  <div class="d-flex align-items-center gap-2">
+    <i class="bi bi-percent text-primary fs-5"></i>
+    <h6 class="mb-0 fw-semibold">Porcentaje de Salario</h6>
+  </div>
+
+  <!-- Texto informativo -->
+  <small class="text-muted d-flex align-items-center gap-1 px-3 pb-3">
+    <i class="bi bi-info-circle"></i>
+    <span>Porcentaje utilizado para calcular el salario del vendedor</span>
+  </small>
+
+  <div class="d-flex gap-2">
+    <div class="flex-grow-1 d-inline-flex flex-column">
+      <div class="input-group input-group rounded-pill overflow-hidden border">
+        <input
+          type="number"
+          class="form-control form-control px-3"
+          id="inputSalaryPercentage"
+          placeholder="1.7"
+          min="0"
+          max="100"
+          step="0.1"
+        />
+        <span class="input-group-text bg-primary text-white border-0 px-3">
+          <i class="bi bi-percent"></i>
+        </span>
       </div>
-      <button
-          class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-          id="btnSaveSalaryPercentage"
-          style="width: 40px; height: 40px; flex-shrink: 0"
-        >
-          <i class="bi bi-floppy fs-5"></i>
-        </button>
+      <div class="invalid-feedback" id="salaryPercentageErrorFeedback"></div>
     </div>
-
+    <button
+      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
+      id="btnSaveSalaryPercentage"
+      style="width: 40px; height: 40px; flex-shrink: 0"
+    >
+      <i class="bi bi-floppy fs-5"></i>
+    </button>
   </div>
 </div>
