--- a/modules/movements/movements.html
+++ b/modules/movements/movements.html
@@ -1,10 +1,7 @@
-<div class="container-fluid">
-
+<div class="">
   <!-- Lista de movimientos -->
-  <div class="container-fluid px-2 py-2">
-    <div id="movementsList" class="d-grid gap-2">
-      <!-- items -->
-    </div>
+  <div id="movementsList" class="d-grid gap-2">
+    <!-- items -->
   </div>
 
   <!-- TEMPLATE: Movimiento -->
@@ -16,7 +13,7 @@
             <!-- Icono -->
             <div
               class="rounded-circle d-flex align-items-center justify-content-center movement-icon"
-              style="width:36px;height:36px"
+              style="width: 36px; height: 36px"
             >
               <i class="bi movement-icon-i text-white"></i>
             </div>
@@ -30,10 +27,14 @@
 
           <!-- Botones de acción -->
           <div class="d-flex gap-2">
-            <button class="btn btn-warning rounded-circle btn-sm btn-edit-movement">
+            <button
+              class="btn btn-warning rounded-circle btn-sm btn-edit-movement"
+            >
               <i class="bi bi-pencil"></i>
             </button>
-            <button class="btn btn-danger rounded-circle btn-sm btn-delete-movement">
+            <button
+              class="btn btn-danger rounded-circle btn-sm btn-delete-movement"
+            >
               <i class="bi bi-trash"></i>
             </button>
           </div>
@@ -41,5 +42,4 @@
       </div>
     </div>
   </template>
-
 </div>
