--- a/layout.html
+++ b/layout.html
@@ -110,120 +110,37 @@
     <div id="moduleControls" class="px-2 d-non" style="padding-top: 70px">
       <!-- Fila de filtros: Buscador + Botones Add -->
       <div
-        class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2"
+        id="container-searchInput-btnAdd"
+        class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2 d-none"
       >
-        <!-- Buscador -->
-        <div
-          class="input-group input-group-sm rounded-pill overflow-hidden border"
-        >
-          <span class="input-group-text bg-primary text-white border-0 px-3">
-            <i class="bi bi-search"></i>
-          </span>
-          <input
-            type="text"
-            id="moduleSearchInput"
-            class="form-control border-0 rounded-0"
-            placeholder="Buscar..."
-          />
-          <button
-            class="btn btn-link btn-sm text-muted border-0 px-2 d-none"
-            id="moduleClearSearch"
-            type="button"
-          >
-            <i class="bi bi-x-circle"></i>
-          </button>
-        </div>
-
-        <!-- Botones Add -->
-        <div
-          id="moduleActionButtons"
-          class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center d-non"
-          style="width: 40px; height: 40px"
-        >
-          <i class="bi bi-plus text-white fs-1"></i>
-        </div>
+        <!-- Se inserta el componente search-input -->
+        <!-- Se inserta el componente btn-add -->
       </div>
 
       <!-- Fila de filtros: Fecha + Ordenamiento -->
-      <div class="fila-2 d-flex gap-2 mb-2">
-        <!-- Filtro de fecha -->
-        <input
-          type="date"
-          id="moduleFilterDate"
-          class="form-control form-control-sm rounded-pill w-100 d-non"
-        />
-
-        <!-- Control de ordenamiento -->
-        <div class="w-100 d-non" id="moduleSortContainer">
-          <div
-            class="input-group input-group-sm rounded-pill overflow-hidden border h-100"
-          >
-            <select class="form-select border-0 rounded-0" id="moduleOrderBy">
-              <option value="" disabled selected>Ordenar…</option>
-            </select>
-            <button
-              class="btn btn-primary border-0 rounded-0"
-              id="moduleOrderDir"
-            >
-              <i class="bi bi-sort-alpha-down"></i>
-            </button>
-          </div>
-        </div>
+      <div
+        id="container-dateFilter-orderBy"
+        class="fila-2 d-flex gap-2 mb-2 d-none"
+      >
+        <!-- Se inserta el componente date-filter -->
+        <!-- Se inserta el componente order-by -->
       </div>
 
-      <!-- Fila de filtros: Chips Movimientos -->
-      <div class="fila-3 d-flex align-items-center gap-2 mb-2 d-non">
-        <!-- Chip: Entradas (Movements) -->
-        <button
-          id="filterIn"
-          class="btn btn-outline-success rounded-pill btn-chip w-100 d-non"
-        >
-          <i class="bi bi-arrow-right"></i> Entradas
-        </button>
-        <!-- Chip: Salidas (Movements) -->
-        <button
-          id="filterOut"
-          class="btn btn-outline-danger rounded-pill btn-chip w-100 d-non"
-        >
-          <i class="bi bi-arrow-left"></i> Salidas
-        </button>
-      </div>
-
-      <!-- Fila de filtros: Chips Productos -->
-      <div class="fila-3 d-flex align-items-center gap-2 mb-2 d-non">
-        <!-- Chip: Stock bajo (Products) -->
-        <button
-          id="filterLowStock"
-          class="btn btn-outline-warning rounded-pill btn-chip w-100 d-non"
-        >
-          <i class="bi bi-box"></i> Stock bajo
-        </button>
-        <!-- Chip: Stock crítico (Products) -->
-        <button
-          id="filterCriticalStock"
-          class="btn btn-outline-danger rounded-pill btn-chip w-100 d-non"
-        >
-          <i class="bi bi-box"></i> Stock crítico
-        </button>
+      <!-- Fila de filtros: Chips -->
+      <div
+        id="container-chipsFilter"
+        class="fila-3 d-flex align-items-center gap-2 mb-2 d-none"
+      >
+        <!-- Se inserta el componente chips-filter -->
       </div>
 
       <!-- Fila de filtros: Contador + Botón limpiar filtros -->
       <div
-        class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2"
+        id="container-listCounter-btnClearFilters"
+        class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-none"
       >
-        <!-- Contador -->
-        <div id="moduleCounter" class="text-muted small px-1 flex-grow-1">
-          0 de 0 elementos
-        </div>
-
-        <!-- Botón limpiar filtros (siempre visible) -->
-        <button
-          class="btn btn-secondary rounded-pill btn-chip w-auto"
-          id="moduleClearFilters"
-          type="button"
-        >
-          <i class="bi bi-funnel"></i> Limpiar filtros
-        </button>
+        <!-- Se inserta el componente list-counter -->
+        <!-- Se inserta el componente btn-clear-filters -->
       </div>
     </div>
 
@@ -351,6 +268,13 @@
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/router.js"></script>
+    <script src="components/search-input/search-input.js"></script>
+    <script src="components/btn-add/btn-add.js"></script>
+    <script src="components/order-by/order-by.js"></script>
+    <script src="components/date-filter/date-filter.js"></script>
+    <script src="components/chips-filter/chips-filter.js"></script>
+    <script src="components/btn-clear-filters/btn-clear-filters.js"></script>
+    <script src="components/list-counter/list-counter.js"></script>
     <script src="js/modules-controls.js"></script>
     <script src="js/modules-modals.js"></script>
     <script src="js/navigation.js"></script>
